examples/misc/error/compilation/eval_match_fun.bfr
let f (a, b) =
  a + b

let main = [
  $build { x }
  + x (f 1 2)
]